[tool.poetry]
name = "test-cdktf"
version = "1.0.0"
description = ""
authors = ["JG <moarpheus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.0.0"
cdktf = "^0.20.3"
cdktf-cdktf-provider-aws = "^19.5.0"
black = "^24.1.1"
coverage = "0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
